--- a/gatsby-blog/package.json
+++ b/gatsby-blog/package.json
@@ -5,26 +5,34 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^3.4.1",
-    "gatsby-plugin-gatsby-cloud": "^2.4.1",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.4.1",
-    "gatsby-plugin-styled-components": "^4.5.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-remark": "^4.2.0",
-    "gatsby-transformer-sharp": "^3.4.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "babel-plugin-styled-components": "^2.0.7",
+    "gatsby": "^4.24.4",
+    "gatsby-plugin-gatsby-cloud": "^4.24.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-offline": "^5.24.0",
+    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-styled-components": "^5.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-remark": "^5.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "@svgr/webpack": "^6.5.0",
+    "got": "^12.5.2",
+    "prettier": "2.7.1",
+    "sanitize-html": "^2.7.2"
+  },
+  "overrides": {
+    "@svgr/webpack": "$@svgr/webpack",
+    "got": "$got",
+    "sanitize-html": "$sanitize-html"
   },
   "keywords": [
     "gatsby"
